--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a class="getstarted scrollto" href="#Experiencia">Experiencia</a></li>
             <li><a class="getstarted scrollto" href="#habilidades">Habilidades</a></li>
             <li><a class="getstarted scrollto" href="#Portafolio">Portfolio</a></li>
-            <li><a class="getstarted scrollto" href="#contact">Contacto</a></li>
+            <li><a class="getstarted scrollto" href="#contact">Contactame</a></li>
           </ul>
           
         </div>
